# PersonalFinanceAPI

./: Cargo.toml
src/: main.rs
src/handlers/: account.rs  transaction.rs
src/models/: account.rs  mod.rs  transaction.rs
src/utils/: uuid.rs
