[package]
name = "rust-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
actix-rt = "2.10.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
sea-orm = { version = "1.0.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-uuid" ] }
dotenv = "0.15"
